    * When using a custom win32 chainloader, be less aggressive about
      changing the current working directory on startup.
    * Clean up handling of unbuffered mode in py2exe.  (The old code
      never actually worked; the new code works most of the time but
      might give you the wrong mode if running from a partial update)


v0.9.4

    * Added esky.util.appexe_from_executable, a convenience method to
      find the bootstrapping exe corresponding to the running program.
    * Use "bsdiff4" module in preference to cx-bdiff if available; it's
      got a simpler API and is pip-installable.
    * Update rpython-compilation support for PyPy v1.5.
    * Better handling of non-alpha chars in app names; thanks Rafe Kettler.
    * py2exe: support the skip_archive option; thanks yflau.


v0.9.3

    * Preliminary support for a "callback" argument to Esky.auto_update,
      which is called with a dict of status info as update progresses.
    * esky.patch:  preserve file mode when patching a file.
    * DefaultVersionFinder.open_url: ensure that f.size is always an int.


v0.9.2

    * Restore compatability with python2.5, via __future__ imports.
    * esky.winres:  use ctypes.WinError throughout, to make inlining of
      code from this module more reliable.


v0.9.1

    * Fix some build issues on OSX:
        * varname typo in f_py2app.
        * undo py2app's changes to env["MACOSX_DEPLOYMENT_TARGET"] after
          it has finished its work.
        * don't let get_platform() change its value due to changes in the
          build environment; if it does the build files get corrupted.
        * correctly handle dots etc in sys.executable
    * Fix some built issues on win32:
        * the py2exe custom chainloader tried to use 'nt' module before
          it was imported, giving an UnboundLocalError.


v0.9.0

  THIS RELEASE INTRODUCES A NEW ON-DISK FILE LAYOUT - SEE BELOW FOR NOTES

    * Move the version directories, updates directory etc into an "appdata"